# mdbook-embedify

./: .gitignore  404.html  CHANGELOG.html  Cargo.toml  LICENSE  README.md  TESTING.md  global-configuration.html  global-embedding.html  ignore-embeds.html  index.html  intro.html  more-apps.html  print.html  searcher-c2a407aa.js  searchindex-da53ef29.js  searchindex.js  searchindex.json  toc-fd71a7c2.js  toc.html  toc.js  usage.html
.cargo/: config.toml
.github/actions/setup-mdbook/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: page.yaml  release.yaml
assets/css/: patch-9895357d.css
assets/js/: patch.js
development/: index.html  language-matching.html  template.html  testing.html
docs/: book.toml  index.css  index.html
docs/assets/css/: examples.css  index.css  paragraph.css
docs/assets/js/: index.js  patch.js
docs/assets/templates/: canvas.html
docs/src/: CHANGELOG.md  SUMMARY.md  global-embedding.md  ignore-embeds.md  index.md  more-apps.md  usage.md
docs/src/development/: index.md  language-matching.md  template.md  testing.md
docs/src/local/: announcement-banner.md  footer.md  include.md  index.md  scroll-to-top.md
example/: book.toml
example/assets/css/: patch.css
example/src/: SUMMARY.md  global-configuration.md  global-embedding.md  ignore-embeds.md  intro.md  usage.md
example/src/local/: announcement-banner.md  footer.md  intro.md  scroll-to-top.md
local/: announcement-banner.html  footer.html  include.html  index.html  intro.html  scroll-to-top.html
src/: cfg.rs  cli.rs  detect_lang.rs  embed.rs  lib.rs  main.rs  parser.rs  utils.rs
src/assets/: mod.rs  parser.pest
src/assets/config/: languages.json  languages.yaml
src/assets/pests/: parser.pest
src/assets/scripts/: include.rs
src/assets/templates/: announcement-banner.html  bilibili.html  codepen.html  codesandbox.html  giscus.html  gist.html  scroll-to-top.html  stackblitz.html  vimeo.html  youtube.html
templates/: announcement-banner.html  bilibili.html  codepen.html  codesandbox.html  footer.html  giscus.html  gist.html  scroll-to-top.html  stackblitz.html  vimeo.html  youtube.html
test_books/a/: book.toml
test_books/a/expected/: chapter_1.md
test_books/a/src/: chapter_1.md
test_books/a/src/examples/: Person.pm  hello.pl
tests/: book.rs  detect_lang.rs  parser.rs
tests/test-book/: book.toml
tests/test-book/expected/: app-include.md  apps.md  embed-ignore.md
tests/test-book/src/: SUMMARY.md  app-include.md  apps.md  embed-ignore.md
tests/test-book/src/samples/: config.md  fibonacci.js  hello.py  package.json
