[package]
name = "mdbook-embedify"
version = "0.2.17-rc.5"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["docs/*", "tests/*"]
keywords = ["mdbook", "embed", "plugin", "preprocessor"]
authors = ["MR-Addict <MR-Addict@qq.com>"]
repository = "https://github.com/MR-Addict/mdbook-embedify"
documentation = "https://mr-addict.github.io/mdbook-embedify"
description = "A rust based mdbook preprocessor plugin that allows you to embed apps to your book, like youtube, codepen, giscus and many other apps"

[dependencies]
clap = "4.5.40"
lazy_static = "1.5.0"
mdbook = "0.4.51"
minify = "1.3.0"
pest = "2.8.1"
pest_derive = "2.8.1"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
rust-embed = "8.7.2"
serde_json = "1.0.140"

[[bin]]
name = "mdbook-embedify"
path = "src/main.rs"

[lib]
name = "mdbook_embedify"
path = "src/lib.rs"
