[package]
name = "mdbook-embedify"
version = "0.3.2"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["docs/*", "tests/*"]
keywords = ["mdbook", "embed", "plugin", "preprocessor"]
authors = ["MR-Addict <MR-Addict@qq.com>"]
repository = "https://github.com/MR-Addict/mdbook-embedify"
documentation = "https://mr-addict.github.io/mdbook-embedify"
description = "A rust based mdbook preprocessor plugin that allows you to embed apps to your book, like youtube, codepen, giscus and many other apps"

[dependencies]
clap = "4.5.57"
lazy_static = "1.5.0"
mdbook-preprocessor = "0.5.2"
mdbook-core = "0.5.2"
minify = "1.3.0"
pest = "2.8.5"
pest_derive = "2.8.5"
pulldown-cmark = "0.13.0"
regex = "1.12.3"
rust-embed = "8.11.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
dircmp = "0.2.0"

[[bin]]
name = "mdbook-embedify"
path = "src/main.rs"

[lib]
name = "mdbook_embedify"
path = "src/lib.rs"
